<resources>
    <string name="app_name">App Foody</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật Khẩu</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="dangnhapfacebook">Đăng nhập Facebook</string>
    <string name="dangnhapbanggoogle">Đăng nhập google</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="dangkymoi"> Đăng ký mới</string>
    <string name="thongbaodangnhapthatbai">Tài khoản không hợp lệ !</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì</string>
    <string name="moinhat">Mới nhất</string>
    <string name="khuvuc">Khu vực</string>
    <string name="danhmuc">Danh mục</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blogs">Blogs</string>
    <string name="topmember">Top thành viên</string>
    <string name="datmon">Đặt món</string>
    <string name="dangtai">Đang Tải...</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng Ký</string>
    <string name="thongbaoloidangky">Thông báo lỗi</string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giống mật khẩu </string>
    <string name="dangkythanhcong">Đăng ký thành công</string>
    <string name="dangxuly">Đang xử lý</string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu </string>
    <string name="chuoikhoiphucmatkhau">Bạn vui lòng nhập email để khôi phục</string>
    <string name="guimail">Gửi mail </string>
    <string name="chuoithanhvien">Bạn không phải là thành viên ?</string>
    <string name="thongbaoemailkhonghople">Email bạn nhập không hợp lệ </string>
    <string name="thongbaoguimailthanhcong">Gửi email thành công !</string>
    <string name="dang">Đăng</string>
    <string name="thucdon">Thực đơn</string>
    <string name="taianh">Tải ảnh</string>
    <string name="checkin">Check in</string>
    <string name="binhluan">Bình Luận</string>
    <string name="chiase">Chia Sẻ</string>
    <string name="luulai">Lưu lại</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="themthucdon">Thêm thực đơn</string>

    <string name="facebook_app_id">330189221028387</string>
    <string name="fb_login_protocol_scheme">fb330189221028387</string>
    <string name="title_activity_choose_location">Map</string>

</resources>
