<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        app:srcCompat="@drawable/ic_add_black_18dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackgroundTrangChu">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                 >

                <android.support.v7.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.SearchView>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:text="@string/gantoi"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/iconfinder_circlecompass_1055093"
                        android:padding="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:text="@string/blogs"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/iconfinder_dropbox_456109"
                        android:padding="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:text="@string/giaohang"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/iconfinder_github_circle_black_107161"
                        android:padding="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:text="@string/gameandfun"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/iconfinder_rss_circle_black_107158"
                        android:padding="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:text="@string/danhgia"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/iconfinder_steam_456104"
                        android:padding="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:text="@string/topmember"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/iconfinder_steam_456104"
                        android:padding="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="left|center"/>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recylerOdau"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
